Adding  meta data

--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@
         </div>
       </section>
 
+            
       <section class="listdetail">
         <div class="downnavbar">
           <span>Company</span>
@@ -381,15 +382,80 @@
           <span>Top Destination</span>
           <span>Top Hotels</span>
         </div>
-        <!-- <nav class="downnavbar">
-          <ul class="top-places">
-            <li>Company</li>
-            <li>Community</li>
-            <li>Top Cities</li>
-            <li>Top Destination</li>
-            <li>Top Hotels</li>
-          </ul>
-        </nav> -->
+        <div class="downlist">
+          <div class="company">
+            <li><a href="https://hotels.ng/visa">Visa</a></li>
+            <li><a href="https://blog.hotels.ng/">Blog</a></li>
+            <li><a href="https://hotels.ng/about">About Us</a></li>
+            <li><a href="https://press.hotels.ng/">Press Page</a></li>
+            <li><a href="https://jobs.hotels.ng/">Job Openings</a></li>
+            <li><a href="https://hotels.ng/privacy">Privacy Policy</a></li>
+            <li><a href="https://hotels.ng/terms">Terms of Service</a></li>
+            <li><a href="https://hotels.ng/how-it-works">How It Works</a></li>
+          </div>
+          <div class="communites">
+            <li><a href="https://www.twitter.com/hotelsng">Twitter</a></li>
+            <li><a href="https://www.facebook.com/hotelsng">Facebook</a></li>
+            <li><a href="https://instagram.com/hotelsng">Instagram</a></li>
+            <li><a href="https://hotels.ng/travel">Travel Blog</a></li>
+            <li><a href="https://hotels.ng/places">Tourist Attraction</a></li>
+            <li><a href="https://hotels.ng/guides">Travel Guide</a></li>
+            <li><a href="https://hotels.ng/top-hotels">Top Hotels in Nigeria</a></li>
+            <li><a href="https://hotels.ng/places/top_places">Top Places in Nigeria</a></li>
+            <li><a href="https://cars.ng/">Cars in Nigeria</a></li>
+          </div>
+          <div class="topcities">
+            <li><a href="https://hotels.ng/hotels-in-lagos">Hotels in Lagos</a></li>
+            <li><a href="https://hotels.ng/hotels-in-cross-river/calabar">Hotels in Calabar</a></li>
+            <li> <a href="https://hotels.ng/hotels-in-abuja">Hotels in Abuja</a></li>
+            <li><a href="https://hotels.ng/hotels-in-lagos/ikoyi">Hotels in Ikoyi</a></li>
+            <li><a href="https://hotels.ng/hotels-in-imo/owerri">Hotels in PortHarcourt</a></li>
+            <li><a href="https://hotels.ng/hotels-in-imo/owerri">Hotels in Owerri</a></li>
+            <li><a href="https://hotels.ng/hotels-in-lagos/maryland">Hotels in MaryLand</a></li>
+            <li><a href="https://hotels.ng/hotels-in-abia">Hotels in Abia</a></li>
+           <li> <a href="https://hotels.ng/hotels-in-plateau/jos">Hotels in Jos</a></li>
+          </div>
+          <div class="topdestination">
+            <li><a href="https://hotels.ng/places/abuja/">Abuja</a></li>
+           <li><a href="https://hotels.ng/places/lagos/">Lagos</a></li>
+            <li><a href="https://hotels.ng/places/calabar/">Calabar</a></li>
+            <li><a href="https://hotels.ng/places/enugu/">Enugu</a></li>
+          </div>
+          <div class="tophotels">
+           <li> <a href="https://hotels.ng/hotel/52497-hotel-ibis-lagos-ikeja-lagos">Hotel Ibis Lagos Ikeja</a></li>
+            <li><a href="https://hotels.ng/hotel/26241-ibis-lagos-airport-lagos">Ibis Lagos Airport</a></li>
+            <li><a href="https://hotels.ng/hotel/86784-benigold-hotel-lagos">Beni Gold Hotels</a></li>
+            <li><a href="https://hotels.ng/hotel/86784-benigold-hotel-lagos">Apartment</a></li>
+            <li> <a href="https://hotels.ng/hotel/55821-beni-apartments-lagos">Beni Apartment</a></li>
+            <li><a href="https://hotels.ng/hotel/66239-beni-hotels-lagos">Beni Hotels</a></li>
+            <li><a href="https://hotels.ng/hotel/88244-silver-grandeur-hotel-lagos">Silver Grandeur Hotel</a></li>
+            <li> <a href="https://hotels.ng/hotel/34353-grand-ibro-hotel-abuja">Grand Ibiro Hotels</a></li>
+            <li><a href="https://hotels.ng/hotel/998818-chantella-suites-lagos">Choice Suites (Formly</a></li>
+            <li><a href="https://hotels.ng/hotel/998818-chantella-suites-lagos">Chantella Suites)</a></li>
+            <li><a href="https://hotels.ng/hotel/89877-jeromes-garden-and-suites-lagos">Jeromes Graden Suites</a></li>
+            <li><a href="https://hotels.ng/hotel/65735-limeridge-hotel-lagos">Limeridge Hotel</a>
+            </li>
+          </div>
+        </div>
+      </section>
+      <section class="icons">
+        <div class="lines">
+          <div class="copyright">
+            <p class="copy">Copyright &copy 2020 Hotel Booking LImited v7.5.All Rights Resevered</p>
+          </div>
+          <div class="">
+          <span><i class="fab fa-facebook-f"></i></span>
+          <span><i class="fab fa-twitter"></i></span>
+          <span><i class="fab fa-instagram"></i></span>
+          </div>
+          <div class="certified">
+          <span><p class="cert">Certified by:</p></span>
+          </div>
+          <div class="logo">
+            <span><img src="Assets/images/Nanta icon.png" alt=""  class="gov"></span>
+          <span><img src="Assets/images/ndtc.jpg" alt=""  class="gov"></span>
+          </div> 
+        </div>
       </section>
     </footer>
   </div>
